aws/modules/network/vpc/main.tf
# ******************************************************************************
# Create vpc
# ******************************************************************************

resource "aws_vpc" "vpc" {
    cidr_block = var.cidr_block

    tags = merge(
        {Name = var.name},
        var.tags
    )
}
