aws/modules/network/vpc/route_tables.tf
# ******************************************************************************
# Create route tables
# ******************************************************************************

resource "aws_route_table" "private_rt" {
    vpc_id = aws_vpc.vpc.id

    tags = merge(
        {Name = "${var.name}-private-rt"},
        var.tags
    )
}

resource "aws_route_table" "public_rt" {
    vpc_id = aws_vpc.vpc.id

    tags = merge(
        {Name = "${var.name}-public-rt"},
        var.tags
    )
}

# ******************************************************************************
# Create routes
# ******************************************************************************

# TODO

# ******************************************************************************
# Associate route tables with subnets
# ******************************************************************************

# TODO
